<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.StartupActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/welcome"
        android:scaleType="centerCrop"/>
    <ImageView
        android:id="@+id/icClose"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="@dimen/margin_normal"
        android:src="@drawable/ic_close"
        android:contentDescription="@string/content_close_button" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_normal"
        android:layout_marginTop="@dimen/plant_detail_app_bar_height"
        android:background="@drawable/clouds">

        <TextView
            android:id="@+id/tvWelcomeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_scrollview_bottom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/lbl_welcome_title"
            android:textStyle="bold"
            android:textColor="@color/textColorMain"
            android:layout_marginBottom="@dimen/margin_medium"
            android:textAppearance="@style/TextAppearance.Material3.DisplaySmall"/>
        <TextView
            android:id="@+id/tvWelcomeBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textColorMain"
            android:layout_marginTop="@dimen/margin_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvWelcomeTitle"
            android:layout_marginBottom="@dimen/margin_medium"
            android:text="@string/lbl_welcome_body"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLoginWithEmailFacebook"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btnLoginWithEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_medium"
            android:text="@string/btn_login_with_facebook"
            android:textAllCaps="false"
            app:backgroundTint="@color/colorPrimary"
            app:cornerRadius="@dimen/corner_radius_medium"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLoginWithEmailAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btnCreateNewAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_medium"
            android:text="@string/btn_login_with_email_address"
            android:textAllCaps="false"
            app:backgroundTint="@color/colorPrimary"
            app:cornerRadius="@dimen/corner_radius_medium"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreateNewAccount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_normal"
            android:text="@string/btn_create_new_account"
            android:textAllCaps="false"
            app:backgroundTint="@color/colorPrimary"
            app:cornerRadius="@dimen/corner_radius_medium"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>